@@ -240,6 +240,17 @@ name|boolean
 name|hasNext
 parameter_list|()
 block|{
+if|if
+condition|(
+name|hasNextCalled
+condition|)
+block|{
+return|return
+name|actualTerm
+operator|!=
+literal|null
+return|;
+block|}
 name|hasNextCalled
 operator|=
 literal|true
@@ -320,7 +331,13 @@ specifier|public
 name|void
 name|remove
 parameter_list|()
-block|{}
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|()
+throw|;
+block|}
 block|}
 block|}
 end_class
